# Half.Sample

./: .gitignore  SConstruct  appveyor.yml  setup.py
sample/: __init__.py  process.py  result.py  sample.py
src/: CMakeLists.txt  constant.hpp  sample.cpp  types.hpp
src/commander/: base.cpp  base.hpp  commander.cpp  commander.hpp  measure.cpp  measure.hpp
src/config/: sampling_config.cpp  sampling_config.hpp
src/error/: error.cpp  error.hpp
src/estimate/: estimate.cpp  estimate.hpp
src/global/: global.hpp
src/processor/: processor.cpp  processor.hpp
src/result/: sampling_result.hpp
src/sampler/: mock_sampler.cpp  mock_sampler.hpp  real_sampler.hpp  sampler.hpp  sampler_factory.cpp  sampler_factory.hpp
tests/: test_estimate.py  test_measure.py
